# drl_air_hockey

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.eval  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  open.bash
.docker/: _build_parent.bash  build.bash  dev.bash  dev_with_parent.bash  join.bash  run.bash
.docker/host/: install_docker.bash
.git_hooks/: install.bash
.github/workflows/: docker.yml  pre-commit.yml
drl_air_hockey/: __init__.py
drl_air_hockey/agents/: __init__.py  multi_strategy_agent.py  single_strategy_agent.py  spacer_agent.py  spacer_agent_inference.py  spacer_agent_qualifying.py
drl_air_hockey/agents/models/: config.yaml
drl_air_hockey/dreamer/: __init__.py  __main__.py  eval.py  hyperparams.yaml  inference_driver.py  main.py  rewards.py  selector.py  train.py  utils.py  wrapper.py  wrapper_brax.py
drl_air_hockey/td7/: TD7.py  buffer.py
drl_air_hockey/utils/: config.py  env_wrapper.py  eval.py  rewards.py  task.py  tournament_agent_strategies.py  train.py
scripts/: _parse_team_info.bash  download_dataset.py  download_models.bash  eval_dreamerv3.py  eval_tournament.py  random_agent.py  replay_dataset.py  submit_solution.bash  train_dreamerv3.py  train_dreamerv3_qualifying.py  train_td7.py
scripts/challenge/: _parse_team_info.bash  download_dataset.py  local_test.bash  replay_dataset.py  submit_solution.bash
